updated source code link

--- a/public/index.html
+++ b/public/index.html
@@ -115,7 +115,7 @@
           <h3>for developers</h3>
           <ul>
             <li><a href="/apidocs/?url=/api/swagger/swagger.yaml">SOmusic API</a></li>
-            <li><a href="https://hub.jazz.net/project/fredatwork/somusic/overview">source code</a></li>
+            <li><a href="https://github.com/l2fprod/somusic-webui">source code</a></li>
           </ul>
         </div>
       </div>
