--- a/public/index.html
+++ b/public/index.html
@@ -124,7 +124,7 @@
   <script src="vendor/angular-material/angular-material.min.js"></script>
 
   <!-- Your application bootstrap  -->
-  <script src="js/somusicapp.js"></script>
+  <script src="js/somusic.js"></script>
   <script src="js/ranking.service.js"></script>
   <script src="home/home.js"></script>
   <script src="directives/entry/entry.js"></script>
