--- a/public/index.html
+++ b/public/index.html
@@ -10,7 +10,7 @@
 
   <link rel="stylesheet" href="vendor/angular-material/angular-material.min.css">
   <link rel="stylesheet" href="css/somusic.css">
-  <link rel="stylesheet" href="css/somusic-light.css" id="theme">
+  <link rel="stylesheet" href="css/somusic-dark.css" id="theme">
   <link rel="icon" type="image/x-icon" sizes="any" href="images/favico.png"/>
 </head>
 <body ng-app="somusicApp" ng-cloak layout="row" ng-controller="MainController as controller">
