font size, twitter icon instead of follow and fix for light theme

--- a/public/index.html
+++ b/public/index.html
@@ -32,21 +32,9 @@
           <md-button class="md-icon-button" href="https://github.com/l2fprod/somusic-webui">
             <md-icon md-svg-src="images/github-circle.svg"></md-icon>
           </md-button>
-          <a href="https://twitter.com/l2fprod" class="twitter-follow-button" data-show-count="false" data-size="large" data-dnt="true">Follow @l2fprod</a>
-          <script>
-            ! function(d, s, id) {
-              var js, fjs = d.getElementsByTagName(s)[0],
-                p = /^http:/.test(d.location) ? 'http' : 'https';
-              if (!d.getElementById(id)) {
-                js = d.createElement(s);
-                js.id = id;
-                js.src = p + '://platform.twitter.com/widgets.js';
-                fjs.parentNode.insertBefore(js, fjs);
-              }
-            }(document, 'script', 'twitter-wjs');
-
-          </script>
-
+          <md-button class="md-icon-button" href="https://twitter.com/l2fprod">
+            <md-icon class="twitter-icon" md-svg-src="images/twitter.svg"></md-icon>
+          </md-button>
         </div>
       </md-toolbar>
     </header>
